Some static compression/niceness fixes.
 * Ditching the jquery-ui theme. Too much CSS, too many images, too much
   suck. Just using jquery-ui (no CSS), and re-generated a new jquery-ui
   JS file with a smaller footprint.

 * Using custom CSS to style $.autocomplete(), which is one of the two
   things we're still using jquery UI for.

 * Shrunk some image sizes, as per google pagespeed recommendations.

 * Working on getting django-compressor working correctly. Not done with
   that yet.

--- a/localwiki/themes/sapling/assets/pages/css/pages.css
+++ b/localwiki/themes/sapling/assets/pages/css/pages.css
@@ -261,52 +261,26 @@ td, th {
 
 /*
 ====================================
- Autocomplete
+ Autocomplete inside CKeditor
 ====================================
 */
 
-.ui-autocomplete {
-    position: absolute;
-    cursor: default;
-    z-index: 10011!important;
-}
-.ui-menu {
-	list-style:none;
-	padding: 0;
-	margin: 0;
-	display:block;
-	float: left;
-    background-color: #fff;
+.cke_dialog .ui-autocomplete {
+    position: fixed!important;
+    z-index: 3000!important;
+    background-color: white;
+
+    top: inherit!important;
+    left: inherit!important;
+
+    margin-top: -5px!important;
+    display: table;
     border: 1px solid #BFBFBF;
-    -webkit-border-bottom-right-radius: 2px;
-    -webkit-border-bottom-left-radius: 2px;
-    -moz-border-radius-bottomright: 2px;
-    -moz-border-radius-bottomleft: 2px;
-    border-bottom-right-radius: 2px;
-    border-bottom-left-radius: 2px;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)
 }
-/* bump up autocomplete box a bit. setting margin here actually works */
-.ui-menu .ui-menu-item:first-child {
-    margin-top: -1px!important;
-}
-.ui-menu .ui-menu-item {
-	margin: 0;
-	zoom: 1;
-	float: left;
-	clear: left;
-	width: 100%;
-    background-color: #fff;
-}
-.ui-menu .ui-menu-item a {
-	text-decoration:none;
-	display:block;
-	padding:.2em .4em;
-	line-height:1.5;
-	zoom:1;
-    color: inherit;
-}
-.ui-menu .ui-menu-item a.ui-state-hover,
-.ui-menu .ui-menu-item a.ui-state-active {
-	font-weight: normal;
-    background-color: #e1e1e1;
+.cke_dialog .ui-autocomplete .ui-menu-item {
+    font-size: 115%!important;
 }
